# agentic_workforce

./: .env.advanced.example  .env.example  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TASKLIST.md  docker-compose.yml  eslint.config.mjs  index.html  long_term_upgrades.md  package-lock.json  package.json  stdout.txt  tsconfig.json  tsconfig.strict.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
build-resources/: README.md  icon.icns
docs/: architecture.md  cli.md  configuration.md  demo-react-dashboard.md  demo.md  faq.md  install.md  known-limitations.md  onboarding.md  release-checklist.md  release-notes-template.md  sbom.production.cdx.json  support-matrix.md  testing.md  troubleshooting.md
electron/: main.mjs  preload.mjs
examples/: mcpIntegration.ts  multiAgentExample.ts
guidelines/: FuturisticPerformancePlan.md  RuthlessIntegrationV2.md
prisma/: schema.prisma
rust/sidecar/: Cargo.toml  build.rs
rust/sidecar/src/: main.rs
scripts/: agentic-cli.mjs  bootstrap.mjs  build-release-notes.mjs  build-sidecar.mjs  check-doc-links.mjs  check-no-secrets.mjs  doctor.mjs  generate-production-sbom.mjs  generate-release-checksums.mjs  generate_release_icons.py  lint-workspace.mjs  local_qwen_openai_server.py  notarize.mjs  prevent-npm-publish.mjs  security-guardrails.mjs
src/: main.test.tsx  main.tsx
(+749 files in other folders)
