[package]
name = "agentic-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
uuid = { version = "1.10", features = ["v4", "serde"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
